add tck and runner modules